--- a/mastishk/src/app/login/login.page.html
+++ b/mastishk/src/app/login/login.page.html
@@ -34,11 +34,11 @@
           Please provide valid password.
         </span>
       </div>
-      <div class="formWrap">
-        <ion-button type="submit" class="button-round btncolorprimary" expand="full" >Sign In</ion-button>
+      <div class="formWrap ion-text-center pt-16">
+        <ion-button type="submit" class="btn button-round btncolorprimary" expand="full" >Sign In</ion-button>
       </div>
-      <div class="formWrap">
-      <ion-button class="button-round btnPrimaryOutline blueColor" expand="full" fill="outline" (click)="goToSignup()">Create Account</ion-button>
+      <div class="formWrap ion-text-center">
+      <ion-button class="btn button-round btnPrimaryOutline blueColor" expand="full" fill="outline" (click)="goToSignup()">Create Account</ion-button>
     </div>
     
     <ion-row>
