--- a/mastishk/src/app/reset-password/reset-password.page.html
+++ b/mastishk/src/app/reset-password/reset-password.page.html
@@ -18,25 +18,25 @@
       </ion-text> -->
       <div class="formWrap">
         <ion-input class="inputField userIcon" formControlName="password" placeholder="Enter New Password" type="text"></ion-input>
-        <span class="error-message ion-padding" *ngIf="isSubmitted && errorControl.password.errors?.required">
+        <span class="error-message validationMsg" *ngIf="isSubmitted && errorControl.password.errors?.required">
           Password is required.
         </span>
-        <span class="error-message ion-padding" *ngIf="isSubmitted && errorControl.password.errors?.pattern">
+        <span class="error-message validationMsg" *ngIf="isSubmitted && errorControl.password.errors?.pattern">
           Please provide valid password.
         </span>
       </div>
       <div class="formWrap">
         <ion-input class="inputField userIcon" formControlName="confirmPassword" placeholder="Confirm Password" type="text"></ion-input>
-        <span class="error-message ion-padding" *ngIf="isSubmitted && errorControl.confirmPassword.errors?.required">
+        <span class="error-message validationMsg" *ngIf="isSubmitted && errorControl.confirmPassword.errors?.required">
           Password is required.
         </span>
-        <span class="error-message ion-padding" *ngIf="isSubmitted && errorControl.confirmPassword.errors?.pattern">
+        <span class="error-message validationMsg" *ngIf="isSubmitted && errorControl.confirmPassword.errors?.pattern">
           Please provide valid password.
         </span>
       </div>
       
-      <div class="formWrap">
-        <ion-button type="submit" class="button-round btncolorprimary" expand="full" >Submit</ion-button>
+      <div class="formWrap pt-16">
+        <ion-button type="submit" class="btn button-round btncolorprimary" expand="full" >Submit</ion-button>
       </div>
     </form>
   </ion-grid>
