--- a/mastishk/src/app/forgot-password/forgot-password.page.html
+++ b/mastishk/src/app/forgot-password/forgot-password.page.html
@@ -20,8 +20,8 @@
         <ion-input class="inputField userIcon" formControlName="contactNumber" placeholder="Enter mobile number" type="number"></ion-input>
       </div>
       
-      <div class="formWrap">
-        <ion-button type="submit" class="button-round btncolorprimary" expand="full" >Send</ion-button>
+      <div class="formWrap pt-16">
+        <ion-button type="submit" class="btn button-round btncolorprimary" expand="full" >Send</ion-button>
       </div>
     </form>
   </ion-grid>
