--- a/mastishk/src/app/reset-password/reset-password.page.scss
+++ b/mastishk/src/app/reset-password/reset-password.page.scss
@@ -23,6 +23,14 @@
 .has-focus{
     border-color: #1a1a1a;
 }
+.btn{
+    max-width: 200px;
+    margin-left: auto;
+    margin-right: auto;
+}
+.pt-16{
+    padding-top: 16px;
+}
 .userIcon{
     background: url(../../assets/user.svg) no-repeat 10px center;
     padding: 0px 0 0px 35px !important;
@@ -51,5 +59,9 @@
 }
 .color-secondary-lite{
     --color: var(--color-secondary-lite);
+}
+.error-message{
+    color: var(--ion-color-danger);
+    font-size: 13px;
 }
 
