--- a/mastishk/src/app/registeration/registeration.page.html
+++ b/mastishk/src/app/registeration/registeration.page.html
@@ -14,11 +14,12 @@
         <h2>Create Account</h2>
       </ion-text>
       <div class="formWrap ion-text-center">
-        <ion-radio-group class="iconicRadioGroup">
-          <div><ion-radio class="iconicRadio self" value="1" checked></ion-radio><span>Self</span></div>
-          <div><ion-radio class="iconicRadio doctor" id="2"></ion-radio><span>Doctor</span></div>
-          <div><ion-radio class="iconicRadio hp" value="3"></ion-radio><span>HP</span></div>
-          <div><ion-radio class="iconicRadio mhp" value="4"></ion-radio><span>MHP</span></div>
+        <ion-radio-group class="iconicRadioGroup" [(ngModel)]="roleId" formControlName="roleId" (ionChange)="onChangeHandler($event)">
+          <ion-radio class="iconicRadio self" value="1" checked></ion-radio>
+          <ion-radio class="iconicRadio doctor" value="2"></ion-radio>
+          <ion-radio class="iconicRadio hp" value="3"></ion-radio>
+          <ion-radio class="iconicRadio mhp" value="4"></ion-radio>
+
         </ion-radio-group>
       </div>
       <div class="formWrap">
