--- a/mastishk/src/app/dashboard/dashboard.page.html
+++ b/mastishk/src/app/dashboard/dashboard.page.html
@@ -4,6 +4,38 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  Welcome To Mastishq App
+<ion-content class="ion-padding content-bg dashboard">
+  <ion-grid>
+    <ion-row>
+      <ion-col size="6">
+        <ion-card class="card">
+        <div class="customCard self">
+          <span>Self Profile</span>
+        </div>
+      </ion-card>
+      </ion-col>
+      <ion-col size="6">
+        <ion-card class="card">
+          <div class="customCard doctor">
+            <span>Doctor Profile</span>
+          </div>
+        </ion-card>
+      </ion-col>
+      <ion-col size="6">
+        <ion-card class="card">
+          <div class="customCard hp">
+            <span>Health Profile</span>
+          </div>
+        </ion-card>
+      </ion-col>
+      <ion-col size="6">
+        <ion-card class="card">
+          <div class="customCard mhp">
+            <span>MHP</span>
+          </div>
+      </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+  
 </ion-content>
