--- a/mastishk/src/app/user-profile/user-profile.page.html
+++ b/mastishk/src/app/user-profile/user-profile.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar class="toolbarBg">
     <ion-title>{{ child ? 'Child ' : 'Adult'}} Profile</ion-title>
   </ion-toolbar>
 </ion-header>
