--- a/mastishk/src/app/dashboard/dashboard.page.html
+++ b/mastishk/src/app/dashboard/dashboard.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar class="toolbarBg"
     <ion-title>Dashboard</ion-title>
   </ion-toolbar>
 </ion-header>
