--- a/mastishk/src/app/dashboard/dashboard.page.scss
+++ b/mastishk/src/app/dashboard/dashboard.page.scss
@@ -79,6 +79,11 @@
 .customCard.mhp span{
     color: #066b5d;
 }
+.toolbarBg{
+    --background: rgb(8,8,84,1);
+    --background: linear-gradient(180deg, rgba(8,8,84,1) 0%, rgba(108,33,69,1) 50%, rgba(235,65,50) 100%);
+    color: var(--color-white);
+}
 @media (max-width: 374px) {
     .customCard{
         background-size: 50px;
