--- a/mastishk/src/app/doctor-profile/doctor-profile.page.html
+++ b/mastishk/src/app/doctor-profile/doctor-profile.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar class="toolbarBg">
     <ion-title>Doctor Profile</ion-title>
   </ion-toolbar>
 </ion-header>
