--- a/mastishk/src/app/doctor-profile/doctor-profile.page.scss
+++ b/mastishk/src/app/doctor-profile/doctor-profile.page.scss
@@ -98,7 +98,6 @@
 .btmBtnWrap ion-button {
     min-width: 150px;
 }
-
 .customSelect, .customTextarea, ion-select{
     padding-left: 0;
     --padding-top: 0px;
@@ -112,4 +111,9 @@
 .customTextarea{
     --padding-right: 0px;
     --padding-start: 0;
+}
+.toolbarBg{
+    --background: rgb(8,8,84,1);
+    --background: linear-gradient(180deg, rgba(8,8,84,1) 0%, rgba(108,33,69,1) 50%, rgba(235,65,50) 100%);
+    color: var(--color-white);
 }
