--- a/mastishk/src/app/health-worker/health-worker.page.html
+++ b/mastishk/src/app/health-worker/health-worker.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Health Worker Profile</ion-title>
+    <ion-title class="toolbarBg">Health Worker Profile</ion-title>
   </ion-toolbar>
 </ion-header>
 
