--- a/mastishk/src/app/user-profile/user-profile.page.scss
+++ b/mastishk/src/app/user-profile/user-profile.page.scss
@@ -108,3 +108,8 @@
 .btmBtnWrap ion-button {
     min-width: 150px;
 }
+.toolbarBg{
+    --background: rgb(8,8,84,1);
+    --background: linear-gradient(180deg, rgba(8,8,84,1) 0%, rgba(108,33,69,1) 50%, rgba(235,65,50) 100%);
+    color: var(--color-white);
+}
