--- a/mastishk/src/theme/variables.scss
+++ b/mastishk/src/theme/variables.scss
@@ -4,7 +4,7 @@
 /** Ionic CSS Variables **/
 :root {
   /** primary **/
-  --ion-color-primary: #3880ff;
+  --ion-color-primary: #080854;
   --ion-color-primary-rgb: 56, 128, 255;
   --ion-color-primary-contrast: #ffffff;
   --ion-color-primary-contrast-rgb: 255, 255, 255;
@@ -92,6 +92,7 @@
  --color-blue: #080854;
  --color-green: #367c10;
  --color-orange: #e28500;
+ --color-white: #fff;
  --ion-no-bg-btn: none;
  --background-opacity: 0;
 }
