--- a/mastishk/src/app/login/login.page.html
+++ b/mastishk/src/app/login/login.page.html
@@ -56,10 +56,10 @@
       <ion-row>        
         <ion-col>
           <div class="ion-text-center">
-            <ion-button class="btnSocial ion-no-padding">
+            <ion-button class="btnSocial ion-no-padding" (click)="goToDashboard()">
               <img src="../../assets/google.svg" />
             </ion-button>         
-            <ion-button class="btnSocial ion-no-padding" (click)="goToDoctorProfile()">
+            <ion-button class="btnSocial ion-no-padding">
               <img src="../../assets/facebook.svg" />
             </ion-button>
           </div>
