--- a/mastishk/src/app/dashboard/dashboard.page.html
+++ b/mastishk/src/app/dashboard/dashboard.page.html
@@ -5,37 +5,37 @@
 </ion-header>
 
 <ion-content class="ion-padding content-bg dashboard">
-  <ion-grid>
-    <ion-row>
-      <ion-col size="6">
-        <ion-card class="card">
+  <ion-grid class="cardRow">
+
+      <ion-card class="card" tabindex="1">
         <div class="customCard self">
+          <div><img src="../../assets/self.svg" alt=""></div>
           <span>Self Profile</span>
         </div>
       </ion-card>
-      </ion-col>
-      <ion-col size="6">
-        <ion-card class="card">
+      
+        <ion-card class="card" tabindex="1">
           <div class="customCard doctor">
+            <div><img src="../../assets/doctor.svg" alt=""></div>
             <span>Doctor Profile</span>
           </div>
         </ion-card>
-      </ion-col>
-      <ion-col size="6">
-        <ion-card class="card">
+     
+        <ion-card class="card" tabindex="1">
           <div class="customCard hp">
+            <div><img src="../../assets/mhp.svg" alt=""></div>
             <span>Health Profile</span>
           </div>
         </ion-card>
-      </ion-col>
-      <ion-col size="6">
-        <ion-card class="card">
+      
+        <ion-card class="card" tabindex="1">
           <div class="customCard mhp">
+            <div><img src="../../assets/nurse.svg" alt=""></div>
             <span>MHP</span>
           </div>
-      </ion-card>
-      </ion-col>
-    </ion-row>
+        </ion-card>
+     
+
   </ion-grid>
-  
+
 </ion-content>
