--- a/mastishk/src/app/health-worker/health-worker.page.scss
+++ b/mastishk/src/app/health-worker/health-worker.page.scss
@@ -100,6 +100,7 @@
 }
 .customSelect, .customTextarea, ion-select{
     --padding-left: 0;
+    padding-left: 0;
     --padding-top: 0px;
     --padding-bottom: 5px;
     border-bottom: 1px solid #f2f2f7;
