Changes and bug fixes

--- a/mastishk/src/app/self/self.page.html
+++ b/mastishk/src/app/self/self.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar class="toolbarBg">
-    <ion-title>Dashboard</ion-title>
+    <ion-title>Self Screening</ion-title>
   </ion-toolbar>
 </ion-header>
 
